...
    <string name="adding_amount">Betrag (€)</string>
    <string name="adding_date">Datum</string>
    <string name="adding_category">Kategorie</string>
    <string name="adding_address">Straße</string>
    <string name="error_message_password_field_empty">Passwortfeld ist leer</string>
    <string name="error_message_email_field">Emailfeld ist leer</string>
    <string name="error_message_store_field">Gib bitte ein Geschäft an</string>
    <string name="error_message_source_field">Gib bitte eine Quelle an</string>
    <string name="error_message_price_field">Gib bitte einen Betrag an</string>
    <string name="error_message_amount_field">Gib bitte eine Anzahl an</string>
    <string name="error_message_name_field">Gib bitte einen Namen an</string>
    <string name="error_message_date_field">Gib ein bitte Datum an</string>
    <string name="error_message_category_field">Gib bitte eine Kategorie an</string>
    <string name="error_message_address_field">Gib bitte eine Addresse an</string>
    <string name="headline_itemlist_view">Artikelübersicht</string>

    <string name="time_message_date_picker">Uhrzeit auswählen</string>


    <string name="lorem_ipsum">
...

    <string name="add_attachments_button">Anhänge hinzufügen Button</string>
    <string name="saveButton">Speichern</string>
    <string name="cancelButton">Abbrechen</string>
    <string name="place">Geschäft</string>
    <string name="source">Quelle</string>
    <string name="selectDate">Datum auswählen</string>
    <string name="DatePickerPositiveButtonText">OK</string>
    <string name="datePickerNegativeButtonText">Abbrechen</string>
    <string name="FAB_add_cashflow">Add Cashflow</string>
    <string name="date_picker_title_placeholder">Date picker title</string>
    <string name="date_picker_value_placeholder">18 Aug - 12 Nov</string>
    <string name="edit_time_range_icon_hint_placeholder">Edit time range</string>
    <string name="change_view_button_description">Ansicht ändern</string>
...
